--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--<app-header></app-header>-->
+<app-header></app-header>
 <main class="bg-gray-100">
   <router-outlet></router-outlet>
 </main>
-<!--<app-footer></app-footer>-->
+<app-footer></app-footer>
