--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<!--<app-content>-->
+<app-content>
   <section class="flex flex-col md:flex-row w-full mb-16">
     <div class="flex-grow shrink-0 w-full md:w-3/5">
       <h1 class="text-black text-3xl font-semibold mb-2">Welcome {{ currentUser.username }}!</h1>
@@ -24,4 +24,4 @@
       Get started
     </button>
   </section>
-<!--</app-content>-->
+</app-content>
