--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="flex h-screen">
   <div class="flex flex-col sm:justify-center items-center w-full pt-6 sm:pt-0 m-auto">
+    <div>
+      <h1 class="text-black text-5xl font-bold">SokkenShop</h1>
+    </div>
 
     <div class="w-full sm:max-w-md mt-6 px-6 py-4 shadow-lg overflow-hidden sm:rounded-lg bg-gray-700">
       <form
