--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-screen">
   <div class="flex flex-col sm:justify-center items-center pt-6 w-full sm:pt-0 m-auto">
     <div>
-      <img src="assets/images/CGI_logo.png" class="w-48">
+      <h1 class="text-black text-5xl font-bold">SokkenShop</h1>
     </div>
 
     <div class="w-full sm:max-w-md mt-6 px-6 py-4 shadow-lg overflow-hidden sm:rounded-lg bg-gray-700">
