--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="flex w-full bg-gray-800" *ngIf="isLoggedIn">
+<header class="flex w-full bg-gray-800">
   <!-- Desktop navigation -->
   <section class="hidden md:flex mx-auto py-4 px-4 container">
 
